objects/Handwrytten__hndwrtObjAccountAccess__c.object
<CustomObject>
    <fields>
        <fullName>Handwrytten__Allow_Gift_Cards__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the gift cards for this user</inlineHelpText>
        <label>Allow Gift Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Handwrytten_Account__c</fullName>
        <label>Handwrytten Account</label>
        <referenceTo>Handwrytten__hndwrtObjAccount__c</referenceTo>
        <relationshipLabel>Handwrytten Account Access</relationshipLabel>
        <relationshipName>Handwrytten_Account_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Maximum_Monthly_Budget__c</fullName>
        <inlineHelpText>Total amount user can spend in a given month</inlineHelpText>
        <label>Maximum Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Record_Key__c</fullName>
        <externalId>true</externalId>
        <label>Record Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__Sort__c</fullName>
        <formula>IF ( Handwrytten__User__c ==  Handwrytten__Handwrytten_Account__r.Handwrytten__Account_Owner__c , 0, 9)</formula>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handwrytten__User_Name__c</fullName>
        <formula>Handwrytten__User__r.FirstName + &apos; &apos; + Handwrytten__User__r.LastName</formula>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Handwrytten_Account_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Handwrytten Account Access</label>
    <nameField>
        <displayFormat>HndwrtAA-{00000000}</displayFormat>
        <label>Handwrytten Acnt Acs Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Account Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Handwrytten__VR_User_Required</fullName>
        <active>true</active>
        <description>User is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__User__c )</errorConditionFormula>
        <errorDisplayField>Handwrytten__User__c</errorDisplayField>
        <errorMessage>User is required</errorMessage>
    </validationRules>
</CustomObject>